--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
       <span id="user-score">0</span> : <span id="computer-score">0</span>
     </div>
 
+    <div class="round-number-board">
+      <div>Round Number:</div>
+      <div id="round-number">0</div>
+    </div>
+
     <div class="result"><p>Paper covers rock. You win!</p></div>
 
     <div class="choices">
